bluez (5.49-1) unstable; urgency=medium

  * Update to 5.49.
  * Remove patches/0002-autopair-Don-t-handle-the-iCade.patch.
    This patch was applied to upstream.

 -- Nobuhiro Iwamatsu <iwamatsu@debian.org>  Mon, 19 Mar 2018 09:24:02 +0900

bluez (5.47-1) unstable; urgency=medium

  * Update to 5.47. (Closes: #876849)
  * Update debian/control.
    - Bump Standards-Version to 4.1.0.
    - Update to debhelper 10.
    - Remove dh-systemd, autotools-dev and dh-autoreconf from B-D.
  * Remove patches/fix_udevadm_in_hid2hci.patch.
  * Remove patches/CVE-2017-1000250.patch.
  * Remove profiles/proximity/proximity.conf from debian/bluez.install.
  * Remove copyrtight of alert, cyclingspeed, heartrate and proximity.
  * Fix missing-call-to-dpkg-maintscript-helper in bluez.

 -- Nobuhiro Iwamatsu <iwamatsu@debian.org>  Fri, 22 Sep 2017 12:10:14 +0900

bluez (5.46-1) unstable; urgency=medium

  * CVE-2017-1000250: information disclosure vulnerability in
    service_search_attr_req (Closes: #875633)
    Add patches/CVE-2017-1000250.patch. Thanks to Salvatore Bonaccorso.

 -- Nobuhiro Iwamatsu <iwamatsu@debian.org>  Sat, 29 Jul 2017 04:56:04 +0900

bluez (5.45-1) unstable; urgency=medium

  * Update to 5.45.
  * Change VCS from svn to git.
  * Update debian/control.
    - Add libasound2-dev to B-D.
    - Add libdw-dev to B-D.
    - Update Vcs-Browser and Vcs-Git field.
  * Remove debian/patches/fix-typo-in-src-main.conf.patch
  * Update debian/patches/main.conf.patch


 -- Nobuhiro Iwamatsu <iwamatsu@debian.org>  Sun, 02 Jul 2017 09:07:00 +0900

bluez (5.43-2) unstable; urgency=medium

  * Fix bluez-obexd service is not started under systemd. (Closes: #804908)
    Add patches/org.bluez.obex.service.in.patch.

 -- Nobuhiro Iwamatsu <iwamatsu@debian.org>  Sat, 18 Mar 2017 00:25:38 +0900

bluez (5.43-1) unstable; urgency=medium

  * Update to 5.43. (Closes: #840983)

 -- Nobuhiro Iwamatsu <iwamatsu@debian.org>  Tue, 01 Nov 2016 07:04:47 +0900
