@@ -35,18 +35,6 @@ Description: Library to use the BlueZ Linux Bluetooth stack
  BlueZ is the official Linux Bluetooth protocol stack. It is an Open Source
  project distributed under GNU General Public License (GPL).
 
-Package: libbluetooth3-dbg
-Architecture: linux-any
-Section: debug
-Priority: extra
-Depends: ${misc:Depends},
-         libbluetooth3 (= ${binary:Version})
-Description: Library to use the BlueZ Linux Bluetooth stack with debugging symbols
- BlueZ is the official Linux Bluetooth protocol stack. It is an Open Source
- project distributed under GNU General Public License (GPL).
- .
- This package contains the debugging symbols.
-
 Package: libbluetooth-dev
 Architecture: linux-any
 Multi-Arch: same
@@ -99,21 +87,6 @@ Description: Bluetooth tools and daemons
  .
  BlueZ is the official Linux Bluetooth protocol stack. It is an Open Source
  project distributed under GNU General Public License (GPL).
-
-Package: bluez-dbg
-Architecture: linux-any
-Section: debug
-Priority: extra
-Depends: ${misc:Depends},
-         bluez (= ${binary:Version}),
-         libbluetooth3-dbg (= ${binary:Version})
-Description: Bluetooth tools and daemons (with debugging symbols)
- This package contains tools and system daemons for using Bluetooth devices.
- .
- BlueZ is the official Linux Bluetooth protocol stack. It is an Open Source
- project distributed under GNU General Public License (GPL).
- .
- This package contains the debugging symbols.
 
 Package: bluez-cups
 Architecture: linux-any
